[package]
name = "korean_numbers"
version = "0.6.2"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["korean", "hangeul", "libhangeul", "hangul"]
categories = ["internationalization"]
repository = "https://git.sr.ht/~andrewzah/korean_numbers"
homepage = "https://git.andrewzah.com/andrei/korean-nums"
readme = "README.md"
description = '''
This parses several types of numbers and expressions to hangeul.
'''

[dependencies]
itertools = "0.8.0"
num = "0.2.0"

[lib]
name = "korean_nums"
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
