[package]
name = "korean_numbers"
version = "0.6.7"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2021"
license = "AGPL-3.0-only"
keywords = ["korean", "hangeul", "libhangeul", "hangul"]
categories = ["internationalization"]
repository = "https://github.com/andrewzah/korean-nums"
readme = "README.md"
description = '''
This parses several types of numbers and expressions to Korean hangeul.
'''

[dependencies]
itertools = "0.10.3"
num = "0.4.0"

[dev-dependencies]

[lib]
name = "korean_nums"
path = "src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
